--- a/imoocTest/test-output/old/Default suite/methods-alphabetical.html
+++ b/imoocTest/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="756ead">  <td>18/12/24 22:29:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.getLoginHome()[pri:0, instance:com.lzq.selenium.imoocTest.testCase.Login@13444fe]">getLoginHome</td> 
-  <td>main@4243057</td>   <td></td> </tr>
-<tr bgcolor="756ead">  <td>18/12/24 22:29:55</td>   <td>17677</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.testLogin()[pri:0, instance:com.lzq.selenium.imoocTest.testCase.Login@13444fe]">testLogin</td> 
-  <td>main@4243057</td>   <td></td> </tr>
+<tr bgcolor="8f92ff">  <td>19/01/03 00:03:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCourseList.CourseList()[pri:0, instance:com.lzq.selenium.imoocTest.testCase.testCourseList@57f43]">CourseList</td> 
+  <td>main@12346707</td>   <td></td> </tr>
 </table>
