--- a/imoocTest/test-output/old/Default suite/classes.html
+++ b/imoocTest/test-output/old/Default suite/classes.html
@@ -4,14 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.lzq.selenium.imoocTest.testCase.testCourseList</td>
+<td>com.lzq.selenium.imoocTest.testCase.Login</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CourseList</td>
+<td>TestAddCart</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>getLoginHome</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
