--- a/imoocTest/test-output/index.html
+++ b/imoocTest/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Administrator.4399SBWQZK4BO21\AppData\Local\Temp\testng-eclipse--1232284109\testng-customsuite.xml</span>
+                    <span>C:\Users\Administrator.4399SBWQZK4BO21\AppData\Local\Temp\testng-eclipse--931905695\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,6 +100,11 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.lzq.selenium.imoocTest.testCase.Login" hash-for-method="TestGoPay">TestGoPay</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.lzq.selenium.imoocTest.testCase.Login" hash-for-method="getLoginHome">getLoginHome</a> <!-- method navigator-link -->
@@ -140,6 +145,13 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="TestGoPay">
+                  </a> <!-- TestGoPay -->
+                  <span class="method-name">TestGoPay</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="getLoginHome">
                   </a> <!-- getLoginHome -->
                   <span class="method-name">getLoginHome</span>
@@ -171,7 +183,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Administrator.4399SBWQZK4BO21\AppData\Local\Temp\testng-eclipse--1232284109\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Administrator.4399SBWQZK4BO21\AppData\Local\Temp\testng-eclipse--931905695\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -220,28 +232,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getLoginHome')
+data.setCell(0, 1, 'testLogin')
 data.setCell(0, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
-data.setCell(0, 3, 32588);
+data.setCell(0, 3, 63950);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testLogin')
+data.setCell(1, 1, 'getLoginHome')
 data.setCell(1, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
-data.setCell(1, 3, 28696);
+data.setCell(1, 3, 63311);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testBuyNow')
+data.setCell(2, 1, 'testSureOrder')
 data.setCell(2, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
-data.setCell(2, 3, 9197);
+data.setCell(2, 3, 3328);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testSureOrder')
+data.setCell(3, 1, 'testBuyNow')
 data.setCell(3, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
-data.setCell(3, 3, 393);
+data.setCell(3, 3, 2830);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'TestGoPay')
+data.setCell(4, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
+data.setCell(4, 3, 2025);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -274,15 +290,19 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testLogin</span>
-                <span class="method-start">32620 ms</span>
+                <span class="method-start">63330 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testBuyNow</span>
-                <span class="method-start">61319 ms</span>
+                <span class="method-start">127287 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testSureOrder</span>
-                <span class="method-start">70530 ms</span>
+                <span class="method-start">130120 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TestGoPay</span>
+                <span class="method-start">133450 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
