--- a/imoocTest/test-output/old/Default suite/classes.html
+++ b/imoocTest/test-output/old/Default suite/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>TestGoPay</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>testBuyNow</td>
 <td>&nbsp;</td></tr>
 <tr>
