--- a/imoocTest/test-output/old/Default suite/methods.html
+++ b/imoocTest/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d2e7d9">  <td>19/02/01 15:48:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.getLoginHome()[pri:0, instance:com.lzq.selenium.imoocTest.testCase.Login@909217e]">getLoginHome</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>19/02/01 15:48:51</td>   <td>32613</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.testLogin()[pri:0, instance:com.lzq.selenium.imoocTest.testCase.Login@909217e]">testLogin</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>19/02/01 15:49:19</td>   <td>61312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.testBuyNow()[pri:0, instance:com.lzq.selenium.imoocTest.testCase.Login@909217e]">testBuyNow</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>19/02/01 15:49:29</td>   <td>70523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.testSureOrder()[pri:0, instance:com.lzq.selenium.imoocTest.testCase.Login@909217e]">testSureOrder</td> 
-  <td>main@899543194</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/02/02 15:02:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.getLoginHome()[pri:0, instance:com.lzq.selenium.imoocTest.testCase.Login@645aa696]">getLoginHome</td> 
+  <td>main@897848096</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/02/02 15:03:10</td>   <td>63328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.testLogin()[pri:0, instance:com.lzq.selenium.imoocTest.testCase.Login@645aa696]">testLogin</td> 
+  <td>main@897848096</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/02/02 15:04:14</td>   <td>127286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.testBuyNow()[pri:0, instance:com.lzq.selenium.imoocTest.testCase.Login@645aa696]">testBuyNow</td> 
+  <td>main@897848096</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/02/02 15:04:17</td>   <td>130118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.testSureOrder()[pri:0, instance:com.lzq.selenium.imoocTest.testCase.Login@645aa696]">testSureOrder</td> 
+  <td>main@897848096</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>19/02/02 15:04:20</td>   <td>133448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.TestGoPay()[pri:0, instance:com.lzq.selenium.imoocTest.testCase.Login@645aa696]">TestGoPay</td> 
+  <td>main@897848096</td>   <td></td> </tr>
 </table>
