--- a/imoocTest/test-output/index.html
+++ b/imoocTest/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Administrator.4399SBWQZK4BO21\AppData\Local\Temp\testng-eclipse--931905695\testng-customsuite.xml</span>
+                    <span>C:\Users\Administrator\AppData\Local\Temp\testng-eclipse-1229622581\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -183,7 +183,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Administrator.4399SBWQZK4BO21\AppData\Local\Temp\testng-eclipse--931905695\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Administrator\AppData\Local\Temp\testng-eclipse-1229622581\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -234,30 +234,30 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testLogin')
+data.setCell(0, 1, 'getLoginHome')
 data.setCell(0, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
-data.setCell(0, 3, 63950);
+data.setCell(0, 3, 28407);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'getLoginHome')
+data.setCell(1, 1, 'testLogin')
 data.setCell(1, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
-data.setCell(1, 3, 63311);
+data.setCell(1, 3, 23508);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testSureOrder')
+data.setCell(2, 1, 'testBuyNow')
 data.setCell(2, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
-data.setCell(2, 3, 3328);
+data.setCell(2, 3, 8232);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testBuyNow')
+data.setCell(3, 1, 'TestGoPay')
 data.setCell(3, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
-data.setCell(3, 3, 2830);
+data.setCell(3, 3, 4563);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'TestGoPay')
+data.setCell(4, 1, 'testSureOrder')
 data.setCell(4, 2, 'com.lzq.selenium.imoocTest.testCase.Login')
-data.setCell(4, 3, 2025);
+data.setCell(4, 3, 3109);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -284,26 +284,34 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">com.lzq.selenium.imoocTest.testCase.Login</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">LoginTest</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">getLoginHome</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">4343 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testLogin</span>
-                <span class="method-start">63330 ms</span>
+                <span class="method-start">32753 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testBuyNow</span>
-                <span class="method-start">127287 ms</span>
+                <span class="method-start">56263 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testSureOrder</span>
-                <span class="method-start">130120 ms</span>
+                <span class="method-start">64496 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TestGoPay</span>
-                <span class="method-start">133450 ms</span>
+                <span class="method-start">67606 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">closed</span>
+                <span class="method-start">72171 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
