--- a/imoocTest/test-output/old/Default suite/classes.html
+++ b/imoocTest/test-output/old/Default suite/classes.html
@@ -33,6 +33,10 @@
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>LoginTest</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
@@ -41,4 +45,8 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>closed</td>
+<td>&nbsp;</td></tr>
 </table>
